subdir('hellos')


install_data(
    [
        'gns' / 'def.tex',
        'gns' / 'gns-bcd.html',
        'gns' / 'gns-bcd.tex',
        'gns' / 'gns-bcd-forbidden.html',
        'gns' / 'gns-bcd-internal-error.html',
        'gns' / 'gns-bcd-invalid-key.html',
        'gns' / 'gns-bcd-not-found.html',
        'gns' / 'gns-bcd-png.tex',
        'gns' / 'gns-bcd-simple.html',
        'gns' / 'gns-bcd-simple.tex',
        'branding' / 'logo' / 'gnunet-logo.png',
        'branding' / 'logo' / 'gnunet-logo-dark-text.svg',
        'branding' / 'logo' / 'gnunet-logo-dark-only-text.svg',
        'testing_hostkeys.ecc',
    ],
    install_dir: get_option('datadir') / 'gnunet',
)
