#
# This file is part of GNUnet.
# Copyright (C) 2023--2024 GNUnet e.V.
#
# GNUnet is free software: you can redistribute it and/or modify it
# under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.
#
# GNUnet is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: AGPL3.0-or-later
#

subdir('internal')

gnunetchat_sources = files([
    'gnunet_chat_account.c', 'gnunet_chat_account.h',
    'gnunet_chat_contact.c', 'gnunet_chat_contact.h',
    'gnunet_chat_context.c', 'gnunet_chat_context.h',
    'gnunet_chat_discourse.c', 'gnunet_chat_discourse.h',
    'gnunet_chat_file.c', 'gnunet_chat_file.h',
    'gnunet_chat_group.c', 'gnunet_chat_group.h',
    'gnunet_chat_handle.c', 'gnunet_chat_handle.h',
    'gnunet_chat_invitation.c', 'gnunet_chat_invitation.h',
    'gnunet_chat_lobby.c', 'gnunet_chat_lobby.h',
    'gnunet_chat_message.c', 'gnunet_chat_message.h',
    'gnunet_chat_ticket.c', 'gnunet_chat_ticket.h',
    'gnunet_chat_uri.c', 'gnunet_chat_uri.h',
    'gnunet_chat_util.c', 'gnunet_chat_util.h',
    'gnunet_chat_lib.c',
]) + gnunetchat_internal_sources

gnunetchat_internal = files([
    'gnunet_chat_contact_intern.c',
    'gnunet_chat_context_intern.c',
    'gnunet_chat_group_intern.c',
    'gnunet_chat_handle_intern.c',
    'gnunet_chat_lobby_intern.c',
    'gnunet_chat_lib_intern.c',
])
