#
# This file is part of GNUnet.
# Copyright (C) 2024--2026 GNUnet e.V.
#
# GNUnet is free software: you can redistribute it and/or modify it
# under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.
#
# GNUnet is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: AGPL3.0-or-later
#

test_gnunet_chat_handle_accounts = executable(
    'test_gnunet_chat_handle_accounts.test',
    'test_gnunet_chat_handle_accounts.c',
    dependencies: test_deps,
    link_with: gnunetchat_lib,
    include_directories: tests_include,
    extra_files: test_header,
)

test_gnunet_chat_handle_connection = executable(
    'test_gnunet_chat_handle_connection.test',
    'test_gnunet_chat_handle_connection.c',
    dependencies: test_deps,
    link_with: gnunetchat_lib,
    include_directories: tests_include,
    extra_files: test_header,
)

test_gnunet_chat_handle_init = executable(
    'test_gnunet_chat_handle_init.test',
    'test_gnunet_chat_handle_init.c',
    dependencies: test_deps,
    link_with: gnunetchat_lib,
    include_directories: tests_include,
    extra_files: test_header,
)

test_gnunet_chat_handle_no_secret = executable(
    'test_gnunet_chat_handle_no_secret.test',
    'test_gnunet_chat_handle_no_secret.c',
    dependencies: test_deps,
    link_with: gnunetchat_lib,
    include_directories: tests_include,
    extra_files: test_header,
)

test_gnunet_chat_handle_rename = executable(
    'test_gnunet_chat_handle_rename.test',
    'test_gnunet_chat_handle_rename.c',
    dependencies: test_deps,
    link_with: gnunetchat_lib,
    include_directories: tests_include,
    extra_files: test_header,
)

test_gnunet_chat_handle_update = executable(
    'test_gnunet_chat_handle_update.test',
    'test_gnunet_chat_handle_update.c',
    dependencies: test_deps,
    link_with: gnunetchat_lib,
    include_directories: tests_include,
    extra_files: test_header,
)
