#
# This file is part of GNUnet.
# Copyright (C) 2023--2024 GNUnet e.V.
#
# GNUnet is free software: you can redistribute it and/or modify it
# under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License,
# or (at your option) any later version.
#
# GNUnet is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: AGPL3.0-or-later
#

messenger_gtk_ui_sources = files([
    'about.c', 'about.h',
    'account_entry.c', 'account_entry.h',
    'accounts.c', 'accounts.h',
    'chat_entry.c', 'chat_entry.h',
    'chat_title.c', 'chat_title.h',
    'chat.c', 'chat.h',
    'contact_entry.c', 'contact_entry.h',
    'contact_info.c', 'contact_info.h',
    'contacts.c', 'contacts.h',
    'delete_messages.c', 'delete_messages.h',
    'discourse_panel.c', 'discourse_panel.h',
    'discourse.c', 'discourse.h',
    'files.c', 'files.h',
    'file_entry.c', 'file_entry.h',
    'file_load_entry.c', 'file_load_entry.h',
    'invite_contact.c', 'invite_contact.h',
    'media_preview.c', 'media_preview.h',
    'message.c', 'message.h',
    'messenger.c', 'messenger.h',
    'new_account.c', 'new_account.h',
    'new_contact.c', 'new_contact.h',
    'new_group.c', 'new_group.h',
    'new_lobby.c', 'new_lobby.h',
    'new_platform.c', 'new_platform.h',
    'new_tag.c', 'new_tag.h',
    'picker.c', 'picker.h',
    'play_media.c', 'play_media.h',
    'send_file.c', 'send_file.h',
    'settings.c', 'settings.h',
    'tag.c', 'tag.h',
])
